framec_tests/language_specific/csharp/v3_facade_smoke/negative/forward_with_args.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                __frame_forward(1);
            }
        }
}

